--- a/trunk/demo/jspdf/basic.lpi
+++ b/trunk/demo/jspdf/basic.lpi
@@ -35,11 +35,11 @@
         <PackageName Value="pas2js_rtl"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="3">
+    <Units Count="2">
       <Unit0>
         <Filename Value="basic.lpr"/>
         <IsPartOfProject Value="True"/>
-        <IsVisibleTab Value="True"/>
+        <CursorPos X="126" Y="6"/>
         <UsageCount Value="20"/>
         <Loaded Value="True"/>
       </Unit0>
@@ -52,11 +52,6 @@
         <UsageCount Value="20"/>
         <DefaultSyntaxHighlighter Value="HTML"/>
       </Unit1>
-      <Unit2>
-        <Filename Value="../src/jsPDF.pas"/>
-        <IsPartOfProject Value="True"/>
-        <UsageCount Value="20"/>
-      </Unit2>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
@@ -66,7 +61,6 @@
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
-      <OtherUnitFiles Value="../src"/>
       <UnitOutputDirectory Value="js"/>
     </SearchPaths>
     <Parsing>
