--- a/trunk/demo/rtl/democollection.lpi
+++ b/trunk/demo/rtl/democollection.lpi
@@ -13,11 +13,9 @@
       <UseAppBundle Value="False"/>
       <ResourceType Value="res"/>
     </General>
-    <CustomData Count="4">
-      <Item0 Name="PasJSPort" Value="0"/>
-      <Item1 Name="PasJSURL"/>
-      <Item2 Name="PasJSWebBrowserProject" Value="1"/>
-      <Item3 Name="PJSProjectHTMLFile" Value="democollection.html"/>
+    <CustomData Count="2">
+      <Item0 Name="PJSProjectHTMLFile" Value="democollection.html"/>
+      <Item1 Name="PasJSWebBrowserProject" Value="1"/>
     </CustomData>
     <BuildModes Count="1">
       <Item1 Name="Default" Default="True"/>
@@ -31,11 +29,6 @@
         <Mode0 Name="default"/>
       </Modes>
     </RunParams>
-    <RequiredPackages Count="1">
-      <Item1>
-        <PackageName Value="pas2js_rtl"/>
-      </Item1>
-    </RequiredPackages>
     <Units Count="1">
       <Unit0>
         <Filename Value="democollection.pas"/>
@@ -46,19 +39,30 @@
   <CompilerOptions>
     <Version Value="11"/>
     <Target>
-      <Filename Value="democollection"/>
+      <Filename Value="democollection.js" ApplyConventions="False"/>
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
       <UnitOutputDirectory Value="lib/$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
+    <Parsing>
+      <SyntaxOptions>
+        <AllowLabel Value="False"/>
+        <UseAnsiStrings Value="False"/>
+      </SyntaxOptions>
+    </Parsing>
+    <Linking>
+      <Debugging>
+        <GenerateDebugInfo Value="False"/>
+      </Debugging>
+    </Linking>
     <Other>
+      <CustomOptions Value="-Jc -Jminclude -Jirtl.js"/>
+      <CompilerPath Value="$(pas2js)"/>
       <ExecuteBefore>
-        <Command Value="$MakeExe(pas2js) -Jc -Jirtl.js -Tbrowser -o$NameOnly($(ProjFile)).js $Name($(ProjFile))"/>
         <ScanForFPCMsgs Value="True"/>
       </ExecuteBefore>
     </Other>
-    <CompileReasons Compile="False" Build="False" Run="False"/>
   </CompilerOptions>
   <Debugging>
     <Exceptions Count="3">
