demo: updated lpi

--- a/trunk/demo/dataabstract/sampleda.lpi
+++ b/trunk/demo/dataabstract/sampleda.lpi
@@ -8,6 +8,7 @@
         <MainUnitHasTitleStatement Value="False"/>
         <MainUnitHasScaledStatement Value="False"/>
         <Runnable Value="False"/>
+        <CompatibilityMode Value="True"/>
       </Flags>
       <SessionStorage Value="InProjectDir"/>
       <MainUnit Value="0"/>
