--- a/trunk/demo/fcldb/demodb.lpi
+++ b/trunk/demo/fcldb/demodb.lpi
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <CONFIG>
-  <ProjectOptions>
-    <Version Value="11"/>
+  <ProjectOptions BuildModesCount="1">
+    <Version Value="12"/>
     <General>
       <Flags>
         <MainUnitHasCreateFormStatements Value="False"/>
         <MainUnitHasTitleStatement Value="False"/>
         <MainUnitHasScaledStatement Value="False"/>
+        <CompatibilityMode Value="True"/>
       </Flags>
       <SessionStorage Value="InProjectDir"/>
       <MainUnit Value="0"/>
@@ -19,8 +20,8 @@
       <Item1 Name="PasJSPort" Value="3039"/>
       <Item2 Name="PasJSWebBrowserProject" Value="1"/>
     </CustomData>
-    <BuildModes Count="1">
-      <Item1 Name="Default" Default="True"/>
+    <BuildModes>
+      <Item1 Name="default" Default="True"/>
     </BuildModes>
     <PublishOptions>
       <Version Value="2"/>
@@ -31,18 +32,11 @@
         <Mode0 Name="default"/>
       </Modes>
     </RunParams>
-    <RequiredPackages Count="2">
-      <Item1>
-        <PackageName Value="pas2js_fcldb"/>
-      </Item1>
-      <Item2>
-        <PackageName Value="pas2js_rtl"/>
-      </Item2>
-    </RequiredPackages>
     <Units Count="1">
       <Unit0>
         <Filename Value="demodb.lpr"/>
         <IsPartOfProject Value="True"/>
+        <UnitName Value="demoxhr"/>
       </Unit0>
     </Units>
   </ProjectOptions>
@@ -71,9 +65,7 @@
       <CustomOptions Value="-Jminclude -Jc -Jirtl.js"/>
       <CompilerPath Value="$(pas2js)"/>
       <ExecuteBefore>
-        <Command Value="$MakeExe(pas2js) -Tbrowser -Jirtl.js -Jc -O- $Name($(ProjFile))"/>
         <ScanForFPCMsgs Value="True"/>
-        <CompileReasons Compile="False" Build="False" Run="False"/>
       </ExecuteBefore>
     </Other>
   </CompilerOptions>
